# zilch_interview

./: .dvcignore  .gitignore  Dockerfile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
app/: app.py
data/: external.dvc
data/scored/: .gitignore
evaluation/: metrics.json
notebooks/: catboost.ipynb  feature_eda.ipynb
zilch_interview/: evaluate.py  prepare.py  train.py
