[tool.poetry]
name = "zilch_interview"
version = "0.1.0"
description = ""
authors = ["Joseph Iles <jgk.iles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
dvclive = "^3.48.0"
streamlit = "^1.40.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
catboost = "^1.2.7"
nbformat = "^5.10.4"
shap = "^0.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
